--- a/frontend/src/pages/RecipientRecord/components/RecipientSummary.css
+++ b/frontend/src/pages/RecipientRecord/components/RecipientSummary.css
@@ -6,10 +6,4 @@
     font-family: 'Merriweather', serif;
 }
 
-.ttahub--recipient-summary {
-    min-height: 350px;
-    max-height: 680px;
-}
-
-
 
